# timetools

./: pyproject.toml
timetools/: mjd.py  parsetime.py  tzconv.py
