[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timetools"
version = "0.1.0"
authors = [
    {name = "Ross Jennings", email = "rossjjennings@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "tzlocal",
    "astropy",
]

[project.scripts]
parsetime = "timetools.parsetime:main"
